# aria2-peer-blocker

./: .rustfmt.toml  Cargo.toml  README.md  README_zh.md  config.toml
.github/actions/install-dependencies/: action.yml
.github/workflows/: build.yml  check_fmt.yml  fmt_and_test.yml  release.yml  run_tests.yml
src/: blocker.rs  config.rs  main.rs
src/peer_blocker/: blocker.rs  blocker_impl.rs  executor.rs  firewall.rs  ipset.rs  mod.rs  option.rs  rules.rs  utils.rs
src/peer_blocker/blocker/: _impl_.rs  blocker.rs  blocker_impl.rs  builder.rs  executor.rs  mod.rs
