[package]
name = "aria2-peer-blocker"
version = "0.1.14"
description = "Aria2 Peer Blocker"
authors = ["Keivry <keivry@163.com>"]
edition = "2021"

[dependencies]
aria2-ws = "0.5.0"
chrono = { version = "0.4.39", default-features = false }
clap = { version = "4.5.23", default-features = false, features = [
    "color",
    "derive",
    "help",
    "std",
    "usage",
] }
colored = "2.2.0"
env_logger = "0.11.6"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ipset = "0.8.0"
log = "0.4.22"
percent-encoding = { version = "2.3.1", default-features = false }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
dashmap = "6.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
