[package]
name = "aria2-peer-blocker"
version = "0.1.14"
description = "Aria2 Peer Blocker"
authors = ["Keivry <keivry@163.com>"]
edition = "2021"

[dependencies]
aria2-ws = "0.5.0"
chrono = { version = "0.4.40", default-features = false }
clap = { version = "4.5.36", default-features = false, features = [
    "color",
    "derive",
    "help",
    "std",
    "usage",
] }
colored = "3.0.0"
env_logger = "0.11.8"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ipset = "0.9.0"
log = "0.4.27"
percent-encoding = { version = "2.3.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.44.2", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
dashmap = "6.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
