[package]
name = "aria2-peer-blocker"
version = "0.1.14"
description = "A simple tool on Linux to block unwelcome BitTorrent peers for Aria2"
authors = ["Keivry <keivry@163.com>"]
edition = "2024"

[dependencies]
aria2-ws = "0.5.1"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.38", default-features = false, features = [
    "color",
    "derive",
    "help",
    "std",
    "usage",
] }
colored = "3.0.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ipset = "0.9.0"
iptables = "0.5.3"
log = "0.4.27"
nftables = "0.6.2"
parking_lot = "0.12.3"
percent-encoding = { version = "2.3.1", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.45.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
toml = { version = "0.8.22", default-features = false, features = ["parse"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
